MF-902 - Add org_name and inviter_email fields to Org-Invite API response objects (#903)
* extend org invite struct with fields for org name and inviter email


* rename setInviteInfo method


---------
