# api/openapi/auth.yml
@@ -878,10 +878,17 @@ components:
           type: string
           format: uuid
           description: The sending Inviter's unique user identifier
+        inviter_email:
+          type: string
+          format: email
+          description: The inviter user's e-mail address.
         org_id:
           type: string
           format: uuid
           description: The organization's unique identifier
+        org_name:
+          type: string
+          description: The organization's name.
         invitee_role:
           type: string
           description: The invitee's proposed role within the organization.
